# MiTHBridge

./: CMakeLists.txt  LICENSE  README.md
doc/: collectd_openwert_esp32c6.md
housing/: README.md
housing/xiao_esp32-c6_extant/3mf/: MiTHBridge_xiao_esp32-c6_extant_case_bottom_v1.1.3mf  MiTHBridge_xiao_esp32-c6_extant_case_bottom_v1.3mf  MiTHBridge_xiao_esp32-c6_extant_case_top_v1.1.3mf  MiTHBridge_xiao_esp32-c6_extant_case_top_v1.3mf  MiTHBridge_xiao_esp32-c6_extant_case_top_v1_led_thin_top.3mf  MiTHBridge_xiao_esp32-c6_extant_case_top_v1_led_transparent_filement.3mf
main/: CMakeLists.txt  Kconfig  app_desc.c  app_desc.h  beacon_pvvx.c  beacon_pvvx.h  build_checks.h  device_mac.c  device_mac.h  keepalive.c  keepalive.h  led_flasher.c  led_flasher.h  main.c  measurement.c  measurement.h  output.c  output.h  sensors_ble.c  sensors_ble.h  sensors_self.c  sensors_self.h  setup_gpio.c  setup_gpio.h  watchdog_ble_sensors.c  watchdog_ble_sensors.h
scripts/: mithbridge.sh
